<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/Button_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="16dp" android:id="@+id/button"/>
    <Button
            android:text="@string/Button_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="161dp" android:id="@+id/button2"/>
    <Button
            android:text="@string/Button_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="306dp" android:id="@+id/button3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            tools:layout_editor_absoluteY="172dp" tools:layout_editor_absoluteX="98dp" android:id="@+id/register_edit"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            tools:layout_editor_absoluteY="297dp" tools:layout_editor_absoluteX="98dp" android:id="@+id/brand_edit"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            tools:layout_editor_absoluteY="445dp" tools:layout_editor_absoluteX="98dp" android:id="@+id/name_edit"/>
    <Button
            android:text="@string/Button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="538dp"
            tools:layout_editor_absoluteX="72dp" android:id="@+id/button4"/>
    <Button
            android:text="@string/Button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="538dp"
            tools:layout_editor_absoluteX="249dp" android:id="@+id/button5"/>
</androidx.constraintlayout.widget.ConstraintLayout>